MFC: r225334

Fix alignment assumptions.

PR:		160289

Former-commit-id: 62bfebdc018caec70a618b937bd107f5329d35bd