tools/tools/netrate/netsend/netsend.c
@@ -6,6 +6,12 @@ end_comment
 begin_include
 include|#
 directive|include
+file|<sys/endian.h>
+end_include
+
+begin_include
+include|#
+directive|include
 file|<sys/types.h>
 end_include
 
@@ -773,7 +779,7 @@ literal|1
 operator|)
 return|;
 block|}
-comment|/* 		 * We maintain and, if there's room, send a counter.  Note 		 * that even if the error is purely local, we still increment 		 * the counter, so missing sequence numbers on the receive 		 * side should not be assumed to be packets lost in transit. 		 * For example, if the UDP socket gets back an ICMP from a 		 * previous send, the error will turn up the current send 		 * operation, causing the current sequence number also to be 		 * skipped. 		 * The counter is incremented only on the initial port number, 		 * so all destinations will see the same set of packets. 		 * 		 * XXXRW: Note alignment assumption. 		 */
+comment|/* 		 * We maintain and, if there's room, send a counter.  Note 		 * that even if the error is purely local, we still increment 		 * the counter, so missing sequence numbers on the receive 		 * side should not be assumed to be packets lost in transit. 		 * For example, if the UDP socket gets back an ICMP from a 		 * previous send, the error will turn up the current send 		 * operation, causing the current sequence number also to be 		 * skipped. 		 * The counter is incremented only on the initial port number, 		 * so all destinations will see the same set of packets. 		 */
 if|if
 condition|(
 name|cur_port
@@ -789,19 +795,12 @@ operator|>=
 literal|4
 condition|)
 block|{
-operator|*
-operator|(
-operator|(
-name|u_int32_t
-operator|*
-operator|)
+name|be32enc
+argument_list|(
 name|a
 operator|->
 name|packet
-operator|)
-operator|=
-name|htonl
-argument_list|(
+argument_list|,
 name|counter
 argument_list|)
 expr_stmt|;
